--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     content="Official webpage of Harmony Heights, featuring our latest music, tour dates, and  exclusive content for our fans.">
     
 </head>
-<body style="background-color: rgb(8, 8, 8);">
-
-
+<body style="background-color:"rgb(8, 8, 8);">
     <h1 style="color: aliceblue;">Welcome to Harmony Heights</h1>
     <p style="color: aliceblue;">"We are Harmony
 Heights, a band that blends genres to create unique sounds. Our journey through
